--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       </section>
       <section class="frame-section" id="frame-6" style="display: none">
         <video
-          src="Frame6-new.mp4"
+          src="frame6-new.mp4"
           id="video6"
           playsinline
           webkit-playsinline
