--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           id="video2"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
           loop
         ></video>
       </section>
@@ -248,7 +248,7 @@
           id="video3"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
           loop
         ></video>
       </section>
@@ -262,7 +262,7 @@
           id="video4"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
         <div
           id="countdown"
@@ -394,7 +394,7 @@
           id="video5"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section class="frame-section" id="frame-6" style="display: none">
@@ -403,7 +403,7 @@
           id="video6"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section class="frame-section" id="frame-7" style="display: none">
@@ -412,7 +412,7 @@
           id="video7"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section
@@ -425,7 +425,7 @@
           id="video8"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
         <a
           href="https://maps.app.goo.gl/EYmAUsSa9VuHvsRW9"
@@ -452,7 +452,7 @@
           id="video9"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
         <a
           href="https://maps.app.goo.gl/EYmAUsSa9VuHvsRW9"
@@ -476,7 +476,7 @@
           playsinline
           webkit-playsinline
           loop
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section class="frame-section" id="frame-11" style="display: none">
@@ -485,7 +485,7 @@
           id="video11"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section class="frame-section" id="frame-12" style="display: none">
@@ -494,7 +494,7 @@
           id="video12"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section class="frame-section" id="frame-13" style="display: none">
@@ -503,7 +503,7 @@
           id="video13"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section class="frame-section" id="frame-14" style="display: none">
@@ -512,7 +512,7 @@
           id="video14"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section
@@ -525,7 +525,7 @@
           id="video14a"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
         <!-- Video overlay di tengah -->
         <video
@@ -549,7 +549,7 @@
           muted
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
           disablePictureInPicture
           controlslist="nodownload nofullscreen noremoteplaybook"
         ></video>
@@ -560,7 +560,7 @@
           id="video15"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section
@@ -573,7 +573,7 @@
           id="video16"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
         <input
           type="text"
@@ -812,7 +812,7 @@
           id="video17"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
       <section class="frame-section" id="frame-18" style="display: none">
@@ -821,7 +821,7 @@
           id="video18"
           playsinline
           webkit-playsinline
-          preload="none"
+          preload="auto"
         ></video>
       </section>
     </main>
