change src file

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <main id="invitation-sections">
       <section class="frame-section" id="frame-1" style="position: relative">
         <video
-          src="frame-new.mp4"
+          src="frame.mp4"
           id="video1"
           playsinline
           muted
@@ -234,7 +234,7 @@
       </section>
       <section class="frame-section" id="frame-2" style="display: none">
         <video
-          src="frame2-new.mp4"
+          src="frame2.mp4"
           id="video2"
           playsinline
           webkit-playsinline
@@ -244,7 +244,7 @@
       </section>
       <section class="frame-section" id="frame-3" style="display: none">
         <video
-          src="frame3-new.mp4"
+          src="frame3.mp4"
           id="video3"
           playsinline
           webkit-playsinline
@@ -258,7 +258,7 @@
         style="display: none; position: relative"
       >
         <video
-          src="frame4-new.mp4"
+          src="frame4.mp4"
           id="video4"
           playsinline
           webkit-playsinline
@@ -390,7 +390,7 @@
       </section>
       <section class="frame-section" id="frame-5" style="display: none">
         <video
-          src="frame5-new.mp4"
+          src="frame5.mp4"
           id="video5"
           playsinline
           webkit-playsinline
@@ -399,7 +399,7 @@
       </section>
       <section class="frame-section" id="frame-6" style="display: none">
         <video
-          src="frame6-new.mp4"
+          src="frame6.mp4"
           id="video6"
           playsinline
           webkit-playsinline
@@ -408,7 +408,7 @@
       </section>
       <section class="frame-section" id="frame-7" style="display: none">
         <video
-          src="frame7-new.mp4"
+          src="frame7.mp4"
           id="video7"
           playsinline
           webkit-playsinline
@@ -421,7 +421,7 @@
         style="display: none; position: relative"
       >
         <video
-          src="frame8-new.mp4"
+          src="frame8.mp4"
           id="video8"
           playsinline
           webkit-playsinline
@@ -448,7 +448,7 @@
         style="display: none; position: relative"
       >
         <video
-          src="frame9-new.mp4"
+          src="frame9.mp4"
           id="video9"
           playsinline
           webkit-playsinline
@@ -471,7 +471,7 @@
       </section>
       <section class="frame-section" id="frame-10" style="display: none">
         <video
-          src="frame10-new.mp4"
+          src="frame10.mp4"
           id="video10"
           playsinline
           webkit-playsinline
@@ -481,7 +481,7 @@
       </section>
       <section class="frame-section" id="frame-11" style="display: none">
         <video
-          src="frame11-new.mp4"
+          src="frame11.mp4"
           id="video11"
           playsinline
           webkit-playsinline
@@ -490,7 +490,7 @@
       </section>
       <section class="frame-section" id="frame-12" style="display: none">
         <video
-          src="frame12-new.mp4"
+          src="frame12.mp4"
           id="video12"
           playsinline
           webkit-playsinline
@@ -499,7 +499,7 @@
       </section>
       <section class="frame-section" id="frame-13" style="display: none">
         <video
-          src="frame13-new.mp4"
+          src="frame13.mp4"
           id="video13"
           playsinline
           webkit-playsinline
@@ -508,7 +508,7 @@
       </section>
       <section class="frame-section" id="frame-14" style="display: none">
         <video
-          src="frame14-new.mp4"
+          src="frame14.mp4"
           id="video14"
           playsinline
           webkit-playsinline
@@ -521,7 +521,7 @@
         style="display: none; position: relative"
       >
         <video
-          src="frame14-test-new.mp4"
+          src="frame14-test.mp4"
           id="video14a"
           playsinline
           webkit-playsinline
@@ -556,7 +556,7 @@
       </section>
       <section class="frame-section" id="frame-15" style="display: none">
         <video
-          src="frame15-new.mp4"
+          src="frame15.mp4"
           id="video15"
           playsinline
           webkit-playsinline
@@ -569,7 +569,7 @@
         style="display: none; position: relative"
       >
         <video
-          src="frame16-new.mp4"
+          src="frame16.mp4"
           id="video16"
           playsinline
           webkit-playsinline
@@ -808,7 +808,7 @@
       </section>
       <section class="frame-section" id="frame-17" style="display: none">
         <video
-          src="frame17-new.mp4"
+          src="frame17.mp4"
           id="video17"
           playsinline
           webkit-playsinline
@@ -817,7 +817,7 @@
       </section>
       <section class="frame-section" id="frame-18" style="display: none">
         <video
-          src="frame18-new.mp4"
+          src="frame18.mp4"
           id="video18"
           playsinline
           webkit-playsinline
